Animações e efeitos sonoros básicos.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header class="header">
-            <label class="header__attributes">
+            <label class="header__attributes attributes--level">
                 <span class="attributes__text">LVL:</span>
                 <input class="attributes__input" type="text" disabled value="9999" data-attribute="level">
             </label>
@@ -131,7 +131,7 @@
         </main>
 
         <footer class="footer">
-            <label class="footer__attributes">
+            <label class="footer__attributes attributes--level">
                 <span class="attributes__text">LVL:</span>
                 <input class="attributes__input" type="text" disabled value="9999" data-attribute="level">
             </label>
